Bug 154374 - comicstrip applet does not have a good area to use to move it
Summary: comicstrip applet does not have a good area to use to move it
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-comic (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-20 13:46 UTC by Pramod Dematagoda
Modified: 2007-12-21 15:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pramod Dematagoda 2007-12-20 13:46:31 UTC
Version:            (using KDE KDE 3.97.0)
Installed from:    Ubuntu Packages
OS:                Linux

The area that can be used to move the comicstrip applet is smaller than those of other applets, the only part that can be used to move the applet at all is the left side of it.
Comment 1 Jason Stubbs 2007-12-21 15:39:27 UTC
SVN commit 751274 by jstubbs:

Only act on the click if it's in the content area so that the applet can
still be dragged from the borders. Also ignore mouse events that aren't
handled so that they are correctly propagated.

BUG: 154374


 M  +5 -1      comic.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=751274