Only act on the click if it's in the content area so that the applet can still be dragged from the borders. Also ignore mouse events that aren't handled so that they are correctly propagated.

BUG: 154374

svn path=/trunk/extragear/plasma/; revision=751274